# lab

./: readme.md
amprinttpl/: .gitignore  build.cmd  go.mod  main.go  readme.md  run.cmd
array_alloc/: array_alloc_test.go
assert_type_boxing/: assert_type_boxing_test.go  main_test.go  readme.md
berlekamp_massey_algorithm/: main.go
binary_matrix_rank_test/: main.go
bincheck/: bin.go  bincheck.go  bincheck_test.go  equal.go  go.mod  go.sum  map.go
bitwise_perf/: bitwise_perf_test.go
bounds_check/: main_test.go
byteconv/: byteconv.go  byteconv_test.go  go.mod
byteptr/: main.go
call_perf/: func.go
call_with_options/: base_options.go  call_with_options.go  call_with_options_test.go  options.go
cbyte_big_alloc/: main.go
chan_internal/: main.go
clock/: clock.go  clock_test.go  readme.md
closure_alloc/: closure_alloc_test.go
cmd_queue/: main.go
combine/: int32_64.go  int32_64_test.go  uint32_1_64.go  uint32_1_64_test.go  uint32_2_64.go  uint32_2_64_test.go  uint32_64.go  uint32_64_test.go
context/: main.go
crasp_test/: main.go
crc32/: crc32.go  crc32_test.go  readme.md  table.go
csync_cmp_perf/: CMakeLists.txt  bench.cpp  main.cpp
dawa_fetch/: main.go
db_conn_max_lt/: go.mod  main.go
defer/: main.go
diskio/: diskio.go
duffcopy/: duffcopy.go  duffcopy_test.go
ensure_bool/: bin.go  ensure_bool_test.go  equal.go  go.mod  go.sum  map.go
entry_search/: entry.go  entry_search_test.go  entry_test.go
fib/: fib_test.go  main.go
fldict/: const.go  main.go  repo.go  scan.go
ftoa/: ftoa_test.go  main.go  readme.md
memclr/: go.mod  (+5 more)
(+154 files in other folders)
